--- a/CrestMaker.csproj
+++ b/CrestMaker.csproj
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <None Remove="Background.png" />
+    <None Remove="BaseImages\DiagonalStripe-2.png" />
+    <None Remove="BaseImages\DiagonalStripe.png" />
+    <None Remove="BaseImages\ExteriorRim.png" />
+    <None Remove="BaseImages\Fleur-De-Lis.png" />
     <None Remove="default.png" />
     <None Remove="Overlay-1.png" />
     <None Remove="Overlay-2.png" />
@@ -26,6 +30,18 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="BaseImages\default.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BaseImages\DiagonalStripe-2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BaseImages\DiagonalStripe.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BaseImages\ExteriorRim.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BaseImages\Fleur-De-Lis.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="BaseImages\Overlay-1.png">
