--- a/CrestMaker.csproj
+++ b/CrestMaker.csproj
@@ -12,10 +12,10 @@
 
   <ItemGroup>
     <None Remove="Background.png" />
-    <None Remove="BaseImages\DiagonalStripe-2.png" />
-    <None Remove="BaseImages\DiagonalStripe.png" />
-    <None Remove="BaseImages\ExteriorRim.png" />
-    <None Remove="BaseImages\Fleur-De-Lis.png" />
+    <None Remove="Templates\DiagonalStripe-2.png" />
+    <None Remove="Templates\DiagonalStripe.png" />
+    <None Remove="Templates\ExteriorRim.png" />
+    <None Remove="Templates\Fleur-De-Lis.png" />
     <None Remove="default.png" />
     <None Remove="Overlay-1.png" />
     <None Remove="Overlay-2.png" />
@@ -26,28 +26,28 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="BaseImages\Background.png">
+    <Content Include="Templates\Backgrounds\Background.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="BaseImages\default.png">
+    <Content Include="Templates\default.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="BaseImages\DiagonalStripe-2.png">
+    <Content Include="Templates\Patterns\DiagonalStripe-2.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="BaseImages\DiagonalStripe.png">
+    <Content Include="Templates\Patterns\DiagonalStripe.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="BaseImages\ExteriorRim.png">
+    <Content Include="Templates\Backgrounds\ExteriorRim.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="BaseImages\Fleur-De-Lis.png">
+    <Content Include="Templates\Symbols\Fleur-De-Lis.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="BaseImages\Overlay-1.png">
+    <Content Include="Templates\Patterns\Overlay-1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="BaseImages\Overlay-2.png">
+    <Content Include="Templates\Patterns\Overlay-2.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
